<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="ro.pub.cs.systems.pdsd.lab03.phonedialer.PhoneDialerActivity" >

   
        <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:ems="10"
        android:gravity="center_vertical|center"
        android:inputType="number" >
        <requestFocus />
    </EditText>
    
	<GridLayout 
    android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:rowCount="6" >
    
	      <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:contentDescription="@string/backspace"
        android:src="@drawable/backspace"
        android:layout_row="0" 
        android:layout_column="2"/> 
    
	 <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/B1" />
	 
	 
	  <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:text="@string/B2" />
	  
	   <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="2"
        android:text="@string/B3" />
	   
	    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:text="@string/B4" />
	 
	    
	     <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="@string/B5" />
	  
	   <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="2"
        android:text="@string/B6" />
	   
	    <Button
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:text="@string/B7" />
	    
	       <Button
        android:id="@+id/button8"
        android:layout_row="3"
        android:layout_column="1"
        android:text="@string/B8" />
	   
	    <Button
        android:id="@+id/button9"
        android:layout_row="3"
        android:layout_column="2"
        android:text="@string/B9" />
	    
	    	    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:text="@string/Bdiez" />
	    
	       <Button
        android:id="@+id/button11"
        android:layout_row="4"
        android:layout_column="1"
        android:text="@string/B0" />
	   
	    <Button
        android:id="@+id/button12"
        android:layout_row="4"
        android:layout_column="2"
        android:text="@string/Bstar" />
	    
	     <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:contentDescription="@string/call"
        android:src="@drawable/call"
        android:layout_row="5" 
        android:layout_column="0"/> 
        
	      <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:contentDescription="@string/hangup"
        android:src="@drawable/hangup"
        android:layout_row="5" 
        android:layout_column="2"/> 
	</GridLayout>
	
	
</LinearLayout>
